crates/rhdl/tests/option_result_more.expect
  × RHDL Type Error
  ╰─▶ RHDL Type Error
     ╭─[/Users/samitbasu/Devel/rhdl/crates/rhdl/tests/option.rs:350:29]
 349 │         let d = match resp {
 350 │             Some(Result::Ok(())) => Some(AXI4Error::SLVERR),
     ·                             ─┬
     ·                              ╰── Path mismatch in type inference
 351 │             Some(Err(e)) => Some(e),
     ╰────
  help: There is a type mismatch in the type inference step.  This is likely due
                the use of nested enums in pattern matching, like Some(Ok(x)).  RHDL can
                only destructure one level of enums at a time.  Replace with Some(y) and
                use a nested match expression to further destructure the inner type.
